# pruebas_SAST

./: BadArraySizeValidation.java  CMakeLists.txt  buffer_overflow.c  buffer_overflow_hostname.c  compile_commands.json  integer_underflow_stack_blow.c  null_deref_host_lookup.c  path_traversal_profile.pl  sonar-project.properties  uaf_connection_free.c  uaf_log_after_free.c  weak_prng_rand.c
.github/workflows/: .gitignore  sonarcloud.yml
